--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
-    "moment-timezone": "^0.5.33",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.5.2",
+    "react-datepicker": "^3.6.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
